Add Camel Quarkus 3.0.0-M2 Staging Repo temporarily

--- a/pom.xml
+++ b/pom.xml
@@ -697,6 +697,17 @@
             <id>confluent</id>
             <url>https://packages.confluent.io/maven/</url>
         </repository>
+        <repository>
+            <id>apache.staging.camel</id>
+            <url>https://repository.apache.org/content/repositories/orgapachecamel-1564/</url>
+            <name>Camel Quarkus 3.0.0-M2 Staging Repo</name>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
     </repositories>
 
     <profiles>
