--- a/pom.xml
+++ b/pom.xml
@@ -381,6 +381,12 @@
                                 <member>
                                     <name>Camel</name>
                                     <bom>org.apache.camel.quarkus:camel-quarkus-bom:${camel-quarkus.version}</bom>
+                                    <dependencyManagement>
+                                        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5801 -->
+                                        <dependency>com.squareup.okhttp3:mockwebserver:4.12.0</dependency>
+                                        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5799  -->
+                                        <dependency>com.google.cloud:google-cloud-pubsub:1.125.13</dependency>
+                                    </dependencyManagement>
                                     <release>
                                         <lastDetectedBomUpdate>io.quarkus.platform:quarkus-camel-bom:3.8.0.CR1</lastDetectedBomUpdate>
                                         <next>${platform.groupId}:quarkus-camel-bom:${platform.version}</next>
@@ -447,18 +453,6 @@
                                         <test><!-- Google Big Query resolution issue https://github.com/apache/camel-quarkus/issues/5798 -->
                                             <skip>true</skip>
                                             <artifact>org.apache.camel.quarkus:camel-quarkus-integration-test-google-bigquery:${camel-quarkus-test-list.version}</artifact>
-                                        </test>
-                                        <test><!-- Google Pub Sub resolution issue https://github.com/apache/camel-quarkus/issues/5799 -->
-                                            <skip>true</skip>
-                                            <artifact>org.apache.camel.quarkus:camel-quarkus-integration-test-google-pubsub:${camel-quarkus-test-list.version}</artifact>
-                                        </test>
-                                        <test><!-- JSch resolution issue https://github.com/apache/camel-quarkus/issues/5800 -->
-                                            <skip>true</skip>
-                                            <artifact>org.apache.camel.quarkus:camel-quarkus-integration-test-jsch:${camel-quarkus-test-list.version}</artifact>
-                                        </test>
-                                        <test><!-- Kubernetes resolution issue https://github.com/apache/camel-quarkus/issues/5801 -->
-                                            <skip>true</skip>
-                                            <artifact>org.apache.camel.quarkus:camel-quarkus-integration-test-kubernetes:${camel-quarkus-test-list.version}</artifact>
                                         </test>
                                     </tests>
                                 </member>
